@@ -23,12 +23,6 @@ and you need to export the sun packages by adding the following to your `build.g
 compileJava {
     options.fork = true
     options.compilerArgs += [
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
             '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
             '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
             '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
